# git-archaeologist

./: .gitignore  .gitlab-ci.yml  README.md  cache.py  chunker.py  cleaner.py  cli.py  exceptions.py  fetcher.py  pyproject.toml  rapport.tex  renderer.py  sonar-project.properties  summarizer.py  synthesizer.py
.github/workflows/: app.yml  security.yml  terraform.yml
ansible/: deploy.yml
api/: Dockerfile  main.py  requirements.txt
api/tests/: test_endpoints.py
frontend/: history.html  index.html
terraform/envs/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/data/: main.tf  outputs.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/frontend/: main.tf  outputs.tf  variables.tf
terraform/modules/messaging/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  variables.tf
terraform/modules/observability/: main.tf  outputs.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
worker/: Dockerfile  main.py  requirements.txt
worker/tests/: test_worker.py
