[project]
name = "git-archaeologist"
version = "0.1.0"
description = "Fetch narrative history of decisions around code paths in GitHub repos"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.30",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.scripts]
git-archaeologist = "cli:main"

[tool.setuptools]
py-modules = ["cli", "fetcher"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
