[project]
name = "git-archaeologist"
version = "0.1.0"
description = "Fetch narrative history of decisions around code paths in GitHub repos"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.30",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.scripts]
git-archaeologist = "cli:main"

[tool.setuptools]
py-modules = ["cache", "cli", "chunker", "cleaner", "exceptions", "fetcher", "renderer", "summarizer", "synthesizer"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
