[project]
name = "git-archaeologist"
version = "0.1.0"
description = "Fetch narrative history of decisions around code paths in GitHub repos"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.30",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.scripts]
git-archaeologist = "cli:main"

[tool.setuptools]
py-modules = ["cache", "cli", "chunker", "cleaner", "exceptions", "fetcher", "renderer", "summarizer", "synthesizer"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "boto3>=1.43.34",
    "coverage>=7.14.2",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "moto[dynamodb,secretsmanager,sqs]>=5.2.2",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "uvicorn>=0.49.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
